some css tweaks

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
                     <img class="w-80 h-10" src="icons/logo.png" alt="">
                 </div>
                 <div class="">
-                    <a class="mr-3" href="">Home</a>
-                    <a class="mr-3" href="">Product</a>
-                    <a class="mr-3" href="">About Us</a>
-                    <a class="mr-3" href="">Contact Us</a>
+                    <a class="mr-14" href="">Home</a>
+                    <a class="mr-14" href="">Product</a>
+                    <a class="mr-14" href="">About Us</a>
+                    <a class="mr-14" href="">Contact Us</a>
                 </div>
             </div>
         </nav>
 
         <!-- Header Banner section -->
 
-        <Div class="flex justify-evenly items-center">
+        <Div class="flex justify-evenly items-center px-36">
             <div>
                 <h3 class="font-roboto font-bold text-[#363958] text-7xl">
                     <span class="font-bebas text-7xl text-[#FABE4C] font-bold">Be the Penguins</span>
